# Continental-MCP-Server

./: .env.example  .gitignore  README.md  alembic.ini  mcp_phases.md  mcp_plan.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
deploy/: Caddyfile  README.md  backup.sh  docker-compose.yml  duckdb_views.sql  wireguard.md
deploy/systemd/: pmre-analytics-daily.service  pmre-analytics-daily.timer  pmre-analytics-hourly.service  pmre-analytics-hourly.timer  pmre-analytics-weekly.service  pmre-analytics-weekly.timer  pmre-backup.service  pmre-backup.timer  pmre-mcp.service  pmre-rest.service  pmre@.service
examples/: openai_agent_mcp.py
src/pm_sessions/: __init__.py  calendars.py  model.py
src/pmre/: __init__.py  cli.py  config.py  demo.py  feecurve.py  logging_setup.py  parquet_export.py  rawarchive.py  replay.py
src/pmre/analytics/: __init__.py  calibration.py  ev.py  maker_fill.py  regime.py  reports.py  runner.py  stats.py  walkforward.py
src/pmre/collectors/: __init__.py  btc_feed.py  calendar_job.py  clob_ws.py  discovery.py  orderbook.py  resolution.py  (+3 more)
tests/: conftest.py  helpers.py  test_phase0_foundation.py  test_phase10_ops_pipeline.py  test_phase10_supervisor_cli.py  test_phase11_live_loops.py  test_phase1_discovery.py  test_phase1_sessions.py  test_phase2_orderbook.py  test_phase2_snapshotter.py  test_phase3_features.py  test_phase4_resolution.py  test_phase5_export.py  test_phase6_analytics.py  test_phase7_registry.py  test_phase8_rest.py  test_phase9_mcp.py  test_postgres_integration.py
(+35 files in other folders)
