[project]
name = "pm-research-engine"
version = "0.1.0"
description = "24/7 data collection, analytics, and intelligence service for Polymarket BTC 5-minute Up/Down markets (research only)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "duckdb>=1.5.4",
    "exchange-calendars>=4.13.2",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "numpy>=2.5.1",
    "orjson>=3.11.9",
    "polars>=1.42.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "scipy>=1.18.0",
    "sqlalchemy>=2",
    "statsmodels>=0.14.6",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.50.2",
    "websockets>=16.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "hypothesis>=6.156.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
    "time-machine>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmre", "src/pm_sessions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008", "E501"]

[tool.coverage.run]
source = ["src/pmre", "src/pm_sessions"]
